--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\" \"node --watch server\"",
+    "dev": "concurrently \"node --watch server\" \"npm run frontend\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client"
+    "frontend": "cd ../frontend && npm run start"
   },
   "keywords": [],
   "author": "",
